# mahjong-bot

./: Cargo.toml  README.md
src/: agent.rs  main.rs  play_mahjong.rs  player_information.rs  utils.rs
src/strategies/: evaluation.rs  mod.rs
