[package]
name = "mahjong_bot"
version = "0.1.0"
edition = "2021"

[profile.release-with-debug]
inherits = "release"
debug = true

[dependencies]
assert_approx_eq = "1.1.0"
env_logger = "0.11.3"
itertools = "0.13.0"
log = "0.4.21"
rand = "0.8.5"
riichi = "0.1.0"
test-case = "3.3.1"
timed = "0.2.1"
approx = "0.5.1"
